yt-dlp --batch-file

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -17,3 +17,11 @@
     margin-bottom: 0.5rem;
   }
 }
+
+// .toaster {
+//   width: 100%;
+//   > .toast {
+//     min-width: 100%;
+//     max-width: 100%;
+//   }
+// }
